--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,16 @@
     align-items: center;
     border: solid thin black;
     z-index: 1000;
+    width: 200px;
+}
+
+.post img {
+    width: 100%;
+    height: auto;
 }
 
 #createPostForm {
     display: flex;
     flex-direction: column;
-    width: 20vw;
+    width: 50vw;
 }
